--- a/style.css
+++ b/style.css
@@ -199,6 +199,7 @@ h4 {
     margin: 0.5rem;
     width: calc(100% - 2rem);
     max-width: calc(1000px + 1rem);
+    height: 60%;
 }
 
 #container1 div h5 {
